--- a/.gitmodules
+++ b/.gitmodules
@@ -11,7 +11,7 @@
 	path = sourcedata/raw
 	url = https://github.com/OpenNeuroDatasets/ds000121.git
 	datalad-id = ebd2b5e8-8967-11e8-8833-0242ac120019
-	datalad-url = https://github.com/OpenNeuroDatasets/ds000121.git
+	datalad-url = /scratch1/03201/jbwexler/openneuro_derivatives/raw/ds000121
 [submodule "sourcedata/templateflow"]
 	path = sourcedata/templateflow
 	url = https://github.com/templateflow/templateflow.git
